--- a/.dev.env
+++ b/.dev.env
@@ -1,5 +1,8 @@
 NODE_ENV= development
-MONGODB_CONNECTION  = mongodb://localhost:27017/store
+MONGODB_CONNECTION  = mongodb://localhost
+MONGODB_PORT = 2565
+MONGODB_DATABASE = thelinkstore-dev
+DBS = DATABASE1,DATABASE2,DATABASE3,DATABASE4
 HTTP_SERVER_PORT = 1337
 WS_PORT = 1338
 DOMAIN = localhost
@@ -8,4 +11,4 @@ WS_PROTOCOL = ws
 AWS_KEY=
 AWS_SECRET=
 GOOGLE_ID = 
-GOOGLE_SECRET = 
+GOOGLE_SECRET =
