--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@types/uuid": "^3.4.4",
     "@types/ws": "^6.0.1",
     "aws-sdk": "^2.437.0",
-    "chalk": "^2.4.2",
     "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
     "dotenv": "^7.0.0",
@@ -62,7 +61,11 @@
     "socket.io-client": "^2.2.0",
     "ts-loader": "^5.3.3",
     "uuid": "^3.3.2",
-    "ws": "^6.2.1"
+    "ws": "^6.2.1",
+    "chalk": "^2.4.2",
+    "figlet": "^1.2.1",
+    "inquirer": "^6.3.1",
+    "shelljs": "^0.8.3"
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.9",
